fixed contrast errors

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,9 +21,8 @@
     /* Colours */
     --color-gray-lightest: #F7F8F9;
     --color-gray-light:    #DCDFE1;
-    --color-gray:          #9BA6AD;
-    --color-gray-dark:     #596065;
-    --color-gray-darkest:  #2C343C;
+    --color-gray:          #596065;
+    --color-gray-dark:     #2C343C;
     --color-yellow:        #FFF7C5;
 
     /* Fonts */
@@ -220,7 +219,7 @@ html {
 body {
     border: 5px solid var(--ghost-accent-color);
     box-sizing: border-box;
-    color: var(--color-gray-dark);
+    color: var(--color-gray);
     display: flex;
     flex-direction: column;
     line-height: 1.625;
@@ -252,7 +251,7 @@ a {
 
 a:hover,
 a:focus {
-    color: var(--color-gray-darkest);
+    color: var(--color-gray-dark);
 }
 
 h1,
@@ -261,7 +260,7 @@ h3,
 h4,
 h5,
 h6 {
-    color: var(--color-gray-darkest);
+    color: var(--color-gray-dark);
     font-weight: bold;
     line-height: 1.2;
     margin: 2.5rem 0 1.25rem;
@@ -345,7 +344,7 @@ dd {
 mark,
 ins {
     background: var(--color-yellow);
-    color: var(--color-gray-darkest);
+    color: var(--color-gray-dark);
     padding: 0.1em 0.25em;
     text-decoration: none;
 }
@@ -374,8 +373,8 @@ pre:first-child {
 }
 
 blockquote {
-    border-left: 3px solid var(--color-gray-darkest);
-    color: var(--color-gray-darkest);
+    border-left: 3px solid var(--ghost-accent-color);
+    color: var(--color-gray-dark);
     font-size: 1.25rem;
     font-style: italic;
     line-height: 1.5;
@@ -393,7 +392,7 @@ blockquote small,
 blockquote cite {
     color: var(--color-gray);
     display: inline-block;
-    font-size: 0.875rem;
+    font-size: 1rem;
 }
 
 blockquote small:before,
@@ -438,7 +437,7 @@ td {
 }
 
 th {
-    color: var(--color-gray-darkest);
+    color: var(--color-gray-dark);
     font-weight: bold;
 }
 
@@ -464,7 +463,6 @@ figure:first-child {
 }
 
 figcaption {
-    color: var(--color-gray);
     font-size: 0.875rem;
     text-align: left;
 }
@@ -500,7 +498,7 @@ figcaption {
 }
 
 .kg-card figcaption {
-    margin: 0.5rem auto 0;
+    margin: 0.375rem auto 0;
     max-width: 760px;
 }
 
@@ -515,6 +513,7 @@ figcaption {
 .kg-bookmark-container {
     border: 1px solid var(--color-gray-light);
     border-radius: 3px;
+    color: var(--color-gray);
     display: flex;
     min-height: 140px;
     text-decoration: none;
@@ -534,15 +533,14 @@ figcaption {
 }
 
 .kg-bookmark-title {
-    color: var(--color-gray-darkest);
-    font-size: 1rem;
+    color: var(--color-gray-dark);
+    font-size: 1.125rem;
     font-weight: bold;
     line-height: 1.2;
     margin: 0 0 0.5rem;
 }
 
 .kg-bookmark-description {
-    color: var(--color-gray-dark);
     display: -webkit-box;
     line-height: 1.5;
     max-height: 3em;
@@ -568,10 +566,9 @@ figcaption {
 
 .kg-bookmark-metadata {
     align-items: center;
-    color: var(--color-gray);
     display: flex;
     flex-wrap: wrap;
-    font-size: 0.75rem;
+    font-size: 0.8125rem;
     font-weight: normal;
     line-height: 1.5;
     margin-top: 1rem;
@@ -688,7 +685,7 @@ figcaption {
 }
 
 .navbar-title {
-    color: var(--color-gray-darkest);
+    color: var(--color-gray-dark);
     font-size: 1.75em;
     font-weight: bold;
     letter-spacing: -0.025em;
@@ -779,7 +776,7 @@ figcaption {
 }
 
 .page-title-highlight {
-    color:var(--color-gray-darkest);
+    color:var(--color-gray-dark);
 }
 
 /* 7. Posts
@@ -806,7 +803,6 @@ figcaption {
 
 .post-meta,
 .post-byline {
-    color: var(--color-gray);
     font-size: 0.875rem;
     line-height: 1.5;
 }
@@ -872,7 +868,7 @@ figcaption {
 }
 
 .post-image figcaption {
-    margin-top: 0.5rem;
+    margin-top: 0.375rem;
 }
 
 .post-read-more-link {
@@ -963,13 +959,12 @@ figcaption {
 
 .author-bio,
 .author-links {
-    font-size: 0.875rem;
     line-height: 1.5;
     margin: 0.5rem 0 0;
 }
 
 .author-links {
-    color: var(--color-gray);
+    font-size: 0.8125rem;
 }
 
 .author-links > span {
@@ -1079,7 +1074,7 @@ figcaption {
 
 .footer-social a {
     align-items: center;
-    color: var(--color-gray-dark);
+    color: var(--color-gray);
     display: inline-flex;
     justify-content: center;
     margin: 0.25rem 0.5rem 0.25rem 0;
